# orientation_check

./: README.md  setup.cfg  setup.py
orientationcheck/: f_liveness_detection.py  f_orientation_detection.py  liveness_orientation_detection.py
orientationcheck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
