[metadata]
name = orientationcheck
version = 0.0.3
author = Nabila  Lasri
author_email = lasri.nabilait@gmail.com
description = This repository contains a Python program designed to execute Optical Character Recognition (OCR) and Facial Recognition on images.
long_description = file: README.md
long_description_content_type = text/markdown
#url = git@github.com:NabilaSpotii/ocrapp_v0.0.4.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True